cluster/base/flux-system/gotk-patches.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: source-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
        - name: manager
          resources:
            limits:
              memory: 512Mi
      tolerations:
       - key: "cputype"
         operator: "Equal"
         value: "amd64"
         effect: "PreferNoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
        - name: manager
          resources:
            limits:
              memory: 512Mi
      tolerations:
        - key: "cputype"
          operator: "Equal"
          value: "amd64"
          effect: "PreferNoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kustomize-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
        - name: manager
          resources:
            limits:
              memory: 512Mi
      tolerations:
        - key: "cputype"
          operator: "Equal"
          value: "amd64"
          effect: "PreferNoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-controller
  namespace: flux-system
spec:
  template:
    spec:
      containers:
        - name: manager
          resources:
            limits:
              memory: 512Mi
      tolerations:
        - key: "cputype"
          operator: "Equal"
          value: "amd64"
          effect: "PreferNoSchedule"
