cluster/base/flux-system/flux-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
#  tls:
#  - secretName: "${K8S_DOMAIN}-tls"
  rules:
  - host: flux-webhook.${K8S_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
